# coin-price

./: Cargo.toml  build.rs  config.toml
assets/systemd/: coin-price.service  coin-price.timer
src/: cli.rs  config.rs  main.rs
